[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Textures/background.jpg" type="Texture" id=1]
[ext_resource path="res://Assets/Themes/MainTheme.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Sfx/ritmo1.mp3" type="AudioStream" id=3]
[ext_resource path="res://Assets/Textures/Salida.png" type="Texture" id=4]
[ext_resource path="res://Assets/Scripts/WorldManager.gd" type="Script" id=5]
[ext_resource path="res://Assets/Textures/Llegada.png" type="Texture" id=6]
[ext_resource path="res://Assets/Textures/sanik.png" type="Texture" id=7]
[ext_resource path="res://Assets/Scripts/Sanik.gd" type="Script" id=8]

[sub_resource type="Theme" id=3]
default_font = ExtResource( 2 )

[node name="Node2D" type="Node2D"]

[node name="Background" type="Sprite" parent="."]
position = Vector2( 576, 324 )
scale = Vector2( 0.65, 0.379167 )
texture = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 1008.0
margin_bottom = 64.0
alignment = 2

[node name="TimerLabel" type="Label" parent="HBoxContainer"]
margin_left = 968.0
margin_top = 15.0
margin_right = 992.0
margin_bottom = 33.0
theme = SubResource( 3 )
text = "0"

[node name="ScoreBackground2" type="ColorRect" parent="."]
margin_left = -16.0
margin_top = 128.0
margin_right = 1040.0
margin_bottom = 200.0

[node name="ScoreMatcher" type="ColorRect" parent="ScoreBackground2"]
margin_left = 152.0
margin_right = 184.0
margin_bottom = 72.0
rect_pivot_offset = Vector2( 16, 36 )
color = Color( 0.87451, 1, 0, 1 )

[node name="CheckPoint" type="ColorRect" parent="ScoreBackground2/ScoreMatcher"]
margin_left = 12.0
margin_right = 20.0
margin_bottom = 72.0
rect_pivot_offset = Vector2( 16, 36 )
color = Color( 0, 1, 0.0627451, 1 )

[node name="Salida" type="Sprite" parent="ScoreBackground2"]
position = Vector2( 136, 352 )
texture = ExtResource( 4 )

[node name="Llegada" type="Sprite" parent="ScoreBackground2/Salida"]
position = Vector2( 780, 0 )
texture = ExtResource( 6 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="WorldManager" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Sanik" type="Sprite" parent="."]
position = Vector2( 136, 480 )
scale = Vector2( 0.471831, 0.471831 )
texture = ExtResource( 7 )
script = ExtResource( 8 )

[connection signal="timeout" from="Timer" to="WorldManager" method="_on_Timer_timeout"]
